@@ -1,4 +1,7 @@
 1.6.0
+Searching in current document now includes local defines.
+Added line nunmber of define in dropdown box when finding definition.
+Go to definition button in toolbar now only searches in the current document.
 Adding  @NNN after filename will open file at line NNN eg:kkeditqt /etc/fstab@5, if file is already open just select tab and jump to line.
 Fixed main Makefile.am.
 Code clean.
